syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";

option go_package = "grpc-demo-server/pb";

message GpuModels {
    float vram = 1;
    int64 octane_bench_score = 2;
    int64 gpu_no= 3;
    int64 slot_no= 4;
    int64 available= 5;
    float vram_free = 6;
    google.protobuf.Timestamp updated = 7;
    string id = 8;
}

message CreateGpuModelRequest {
    float vram = 1;
    int64 octane_bench_score = 2;
    int64 gpu_no= 3;
    int64 slot_no= 4;
    int64 available= 5;
    float vram_free = 6;
}

message CreateGpuModelResponse {
    GpuModels gpu = 1;
}

message UpdateGpuModelRequest {
    optional float vram = 1;
    optional int64 octane_bench_score = 2;
    optional int64 gpu_no= 3;
    optional int64 slot_no= 4;
    optional int64 available= 5;
    optional float vram_free = 6;
    string id = 8;
}

message UpdateGpuModelResponse {
    GpuModels gpu = 1;
}

message GetGpuModelRequest {
    string id = 1;
}

message GetGpuModelResponse {
    GpuModels gpu = 1;
}

message GetGpuModelsRequest {
    int64 page = 1;
    int64 per_page = 2;
}

message GetGpuModelsResponse {
    repeated GpuModels gpus = 1;
}